# agent-memory-unified

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  CURRENT-SITUATION.md  DEPLOY-DASHBOARD.md  DEPLOY-STEPS.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-STATUS.md  DEPLOYMENT.md  DESIGN-TRADING.md  Dockerfile.api  Dockerfile.frontend  Dockerfile.redis  Dockerfile.trading  FINAL-MORNING-STATUS.md  FINAL-STATUS.md  FIXES-COMPLETED.md  GEMINI.md  GEMINI_HANDOFF.md  PROD-READY.md  RAILWAY-DEPLOYMENT.md  RAILWAY-EXACT-STEPS.md  RAILWAY-FIX.md  RAILWAY-STATUS.md  README.md  RUN-RAILWAY-SETUP.md  TERMS_FOR_AGENTS.md  UNIFICATION-COMPLETE.md  WAKE-UP-ACTION-PLAN.md  bash.exe.stackdump  deploy-railway.sh  docker-compose.minipc.yml  docker-compose.yml  entities.json  fix-api-frontend-config.py  fix-railway-repo.py  fix-service-roots.py  (+21 more)
trading/: .coverage  .coveragerc  .dockerignore  .env.example  .env.wallet.example  .gitignore  Dockerfile  Dockerfile.bak  Dockerfile.base  Dockerfile.old  Makefile  agents.paper.yaml  agents.yaml  check_db.py  config.py  config_old.py  cov_report.txt  cov_report2.txt  data.db  docker-entrypoint.sh  fix_db.py  learning.yaml  main.py  mcp_server.py  mypy.ini  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  requirements-no-remembr.txt  requirements-test.txt  requirements.txt  risk.yaml  test_env.py  test_kalshi.py  trading_rules.yaml  verify_postgres.py
trading/.keys/: kalshi_key
trading/achievements/: __init__.py  registry.py  tracker.py
trading/agents/: analytics.py  base.py  config.py  consensus.py  decorators.py  gladiator.py  manager.py  meta.py  models.py  router.py  runner.py  signal_adapter.py  tuning.py
trading/analytics/: execution_costs.py  models.py  strategy_scorecard.py
trading/api/: app.py  auth.py  container.py  dependencies.py  deps.py  landing.py  schemas.py
trading/backtest/: engine.py  metrics.py  prediction_market.py
trading/backtesting/: __init__.py  consensus_sim.py  engine.py  models.py  replay.py  results.py  sandbox.py  taoshi_engine.py  taoshi_replay.py  vectorbt_engine.py  walk_forward.py
trading/billing/: stripe_client.py  subscriber_provisioning.py
trading/brief/: generator.py  rules_loader.py  session_bias.py
trading/broker/: __init__.py  errors.py  interfaces.py  models.py  options.py  paper.py
trading/competition/: achievements.py  arena_rewards.py  calibration.py  engine.py  matcher.py  meta_learner.py  models.py  registry.py  season_scheduler.py  store.py  tracker.py
trading/data/: backtest.py  base_bus.py  bittensor_source.py  bus.py  cache.py  coingecko.py  events.py  exchange_client.py  historical_pipeline.py  indicators.py  knowledge_graph.sqlite3-shm  knowledge_graph.sqlite3-wal  massive.py  massive_source.py  polymarket_creds.json  redis_bridge.py  signal_bus.py  signal_types.py  tradingview.py  universe.py
trading/economy/: bookie.py
trading/eval/: kalshi_bench.py  probability_metrics.py
trading/events/: __init__.py  consumer.py  consumer_streams.py  publisher.py
trading/execution/: __init__.py  analyzer.py  arb_executor.py  arbitrage.py  cost_model.py  costs.py  feedback.py  models.py  shadow.py  tracker.py
trading/exits/: __init__.py  manager.py  resolution_tracker.py  rules.py
trading/experiments/: ab_test.py
trading/feeds/: health_monitor.py  order_map.py  pnl_attribution.py  publisher.py
trading/gym/: __init__.py  reflection.py
trading/intelligence/: __init__.py  circuit_breaker.py  config.py  enrichment.py  layer.py  models.py  similarity.py
trading/journal/: __init__.py  autopsy.py  indexer.py  manager.py  models.py  persistence_task.py  service.py
trading/knowledge/: __init__.py  extractor.py  graph.py  models.py  query.py
trading/leaderboard/: __init__.py  engine.py  remembr_sync.py
trading/learning/: __init__.py  agent_memory.py  confidence_calibration.py  config.py  correlation_monitor.py  ensemble_optimizer.py  feature_importance.py  forecast.py  memory_client.py  memory_linter.py  meta_learner.py  optimizer.py  pnl.py  prompt_store.py  reflection.py  rl_position_sizer.py  sentiment.py  signal_features.py  strategy_health.py  strategy_index.py  tournament.py  trade_compiler.py  trade_memory.py  trade_reflector.py  trading_adapter.py  triggers.py
trading/llm/: __init__.py  client.py  cost_ledger.py  providers.py  stats.py
trading/memory/: __init__.py  market_regime.py  regime.py  vector_service.py
trading/models/: __init__.py  thought.py  user.py
trading/notifications/: base.py  composite.py  cost.py  discord.py  log_notifier.py  slack.py  whatsapp.py
trading/observability/: alerting.py  emitter.py  heartbeat_watchdog.py
trading/public_content/: FOR_AGENTS.md  agents.json
trading/regime/: __init__.py  agent_filter.py  context.py  detector.py  models.py
trading/reports/: digest.py
trading/risk/: __init__.py  analytics.py  circuit_breaker.py  config.py  correlation.py  correlation_gate.py  deja_vu.py  engine.py  governor.py  greeks.py  kill_switch.py  pnl.py  portfolio_cap.py  portfolio_optimizer.py  (+3 more)
(+1877 files in other folders)
