[project]
name = "stock-trading-api"
version = "0.1.0"
description = "Broker-agnostic trading API with IBKR adapter"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "asyncpg>=0.29.0",
    "redis>=5.1",
    "PyJWT>=2.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires IB Gateway running with paper account",
]
