[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-trading-api"
version = "0.1.0"
description = "Broker-agnostic trading API with IBKR adapter"
requires-python = ">=3.12"
dependencies = [
    "ib_async>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0.0",
    "croniter>=3.0.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
    "feedparser>=6.0.0",
    "openai>=1.0.0",
    "groq>=0.4.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "py-clob-client>=0.34.0",
    "web3>=7.0.0",
    "supabase>=2.0.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "sentence-transformers>=3.0.0",
    "hnswlib==0.8.0",
    "websockets>=12.0",
    "httpx-sse>=0.4.0",
    "bittensor>=8.0.0",
    "PyJWT>=2.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "venv*", "_vendor*", "*.egg-info"]

[tool.ruff]
exclude = ["venv", ".venv", "_vendor", "vendor"]

[tool.ruff.lint]
# E402: module-level imports not at top (deferred imports are intentional throughout)
# E741: ambiguous variable names like I, l (bittensor uses metagraph.I for incentive)
ignore = ["E402", "E741", "E721"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires IB Gateway running with paper account",
]

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
